# fulgur

./: .gitignore  .markdownlint-cli2.yaml  .octocov.yml  CCLA.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  coderabbit.yaml  mise.toml
.beads/: issues.jsonl  sync_base.jsonl
.claude/: settings.json
.claude/rules/: coordinate-system.md  markdownlint.md
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: ci.yml  cla.yml  pr-labeler.yml  release-prepare.yml  release-python.yml  release-ruby.yml  release.yml  update-examples.yml  vrt-chrome-update.yml  wpt-nightly.yml
crates/fulgur/: Cargo.toml
crates/fulgur-cli/: Cargo.toml
crates/fulgur-cli/src/: main.rs
crates/fulgur-cli/tests/: bookmarks_cli.rs  examples_determinism.rs  inspect_test.rs
crates/fulgur-core/: Cargo.toml
crates/fulgur-core/src/: asset.rs  blitz_adapter.rs  config.rs  convert.rs  engine.rs  error.rs  image.rs  lib.rs  pageable.rs  paginate.rs  paragraph.rs  render.rs
crates/fulgur-core/tests/: engine_test.rs  font_bundle_test.rs  html_test.rs  list_test.rs  render_test.rs  style_test.rs  text_test.rs
crates/fulgur-ruby/: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  fulgur.gemspec
crates/fulgur-ruby/ext/fulgur/: Cargo.toml  extconf.rb
crates/fulgur-ruby/lib/: fulgur.rb
crates/fulgur-ruby/lib/fulgur/: asset_bundle.rb  margin.rb  version.rb
crates/fulgur-ruby/spec/: asset_bundle_spec.rb  engine_spec.rb  error_spec.rb  integration_spec.rb  margin_spec.rb  page_size_spec.rb  pdf_spec.rb  spec_helper.rb
crates/fulgur-ruby/spec/fixtures/: simple.html
crates/fulgur-ruby/src/: asset_bundle.rs  engine.rs  error.rs  gvl.rs  lib.rs  margin.rs  page_size.rs  pdf.rs
crates/fulgur-vrt/: Cargo.toml  README.md  manifest.toml
crates/fulgur-vrt/fixtures/: review_card_inline_block.html
crates/fulgur-vrt/fixtures/basic/: border-radius.html  borders.html  box-shadow.html  solid-box.html
crates/fulgur-vrt/fixtures/bugs/: cover-page-break-after.html  grid-row-promote-background.html
crates/fulgur-vrt/fixtures/layout/: flex-row.html  grid-simple.html  inline-block-basic.html  inline-block-nested.html  inline-block-overflow-hidden.html  inline-flex-smoke.html  inline-grid-smoke.html  multicol-2.html  review_card_inline_block.html
crates/fulgur-vrt/fixtures/paint/: background-gradient.html  gradient-repeat-round.html  gradient-repeat-x-with-position.html  gradient-size-no-repeat-center.html  gradient-to-top-right-tile-aspect.html  linear-gradient-horizontal.html  linear-gradient-out-of-range-high.html  linear-gradient-out-of-range-low.html  opacity.html  radial-gradient-circular.html  radial-gradient-no-repeat-corner.html  radial-gradient-out-of-range.html  radial-gradient-repeat-round.html  radial-gradient-tiled.html  repeating-linear-gradient.html  repeating-radial-gradient.html
crates/fulgur-vrt/fixtures/svg/: shapes.html
crates/fulgur-vrt/src/: chrome.rs  diff.rs  lib.rs  manifest.rs  pdf_render.rs  runner.rs
crates/fulgur-vrt/tests/: gradient_harness.rs  radial_gradient_harness.rs  vrt_test.rs
crates/fulgur-wasm/: Cargo.toml
crates/fulgur-wasm/src/: lib.rs
crates/fulgur-wpt/: Cargo.toml  README.md  build.rs
crates/fulgur-wpt/examples/: run_one.rs  seed.rs
crates/fulgur-wpt/expectations/: css-multicol.txt  css-page.txt
crates/fulgur-wpt/expectations/lists/: bugs.txt  multicol-1.txt  multicol-3.txt  smoke.txt
crates/fulgur-wpt/src/: expectations.rs  fonts.rs  harness.rs  lib.rs  reftest.rs  render.rs  report.rs  runner.rs
crates/fulgur-wpt/tests/: fonts_integration.rs  harness_smoke.rs  render_multi_page.rs  wpt_css_multicol.rs  wpt_css_page.rs  wpt_lists.rs  wpt_smoke.rs
crates/fulgur/src/: asset.rs  background.rs  blitz_adapter.rs  column_css.rs  config.rs  convert.rs  engine.rs  error.rs  image.rs  inspect.rs  lib.rs  link.rs  multicol_layout.rs  net.rs  outline.rs  pageable.rs  paginate.rs  paragraph.rs  render.rs  schema.rs  svg.rs  template.rs
crates/fulgur/src/gcpm/: counter.rs  margin_box.rs  mod.rs  page_settings.rs  parser.rs  running.rs  string_set.rs
crates/fulgur/tests/: background_test.rs  bookmarks_integration.rs  border_radius_test.rs  break_inside_avoid.rs  column_rule_rendering.rs  engine_test.rs  font_bundle_test.rs  gcpm_integration.rs  gradient_test.rs  html_test.rs  image_test.rs  inline_box_overflow_test.rs  inline_box_render_test.rs  link_integration.rs  link_media_attribute.rs  link_stylesheet_url_resolution.rs  list_style_image_test.rs  list_style_inside_test.rs  list_test.rs  media_type_print.rs  multicol_span_all.rs  opacity_visibility_test.rs  page_break_wiring.rs  pseudo_absolute_content_url.rs  pseudo_only_break_before.rs  rect_borders_test.rs  render_smoke.rs  render_test.rs  style_test.rs  svg_test.rs  table_header_test.rs  template_integration.rs  text_decoration_test.rs  text_test.rs  transform_integration.rs  unit_semantics.rs  woff2_integration.rs
crates/fulgur/tests/support/: content_stream.rs  mod.rs
crates/pyfulgur/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/pyfulgur/pyfulgur/: __init__.py
crates/pyfulgur/src/: asset_bundle.rs  engine.rs  error.rs  lib.rs  margin.rs  page_size.rs
crates/pyfulgur/tests/: test_asset_bundle.py  test_engine_builder.py  test_engine_ctor.py  test_errors.py  test_integration.py  test_margin.py  test_page_size.py  test_render_html.py  test_render_html_to_file.py  test_smoke.py
docs/: RELEASE_SETUP.md  css-support.md  faq.ja.md  faq.md
docs/plans/: .markdownlint-cli2.yaml  2026-03-18-fulgur-design.md  2026-03-18-fulgur-implementation.md  2026-03-18-list-markers-implementation.md  2026-03-21-margin-box-layout-design.md  2026-03-21-release-workflow-design.md  2026-03-26-running-element-dompass.md  2026-03-28-template-engine-design.md  2026-03-28-template-engine-impl.md  2026-04-05-gcpm-string-set-implementation.md  2026-04-06-gcpm-element-policy-implementation.md  2026-04-11-svg-inline-rendering.md  (+54 more)
website/: README.md  mkdocs.yml  pyproject.toml
(+56 files in other folders)
