[package]
name = "fulgur-cli"
version = "0.5.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTML/CSS to PDF conversion CLI"
readme = "../../README.md"
keywords = ["pdf", "html", "css", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fulgur"
path = "src/main.rs"

[dependencies]
fulgur = { version = "0.5.10", path = "../fulgur" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
