[package]
name = "fulgur-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "HTML/CSS to PDF conversion library"
repository = "https://github.com/mitsuru/fulgur"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
krilla = "0.6.0"
blitz-html = "0.2"
blitz-dom = "0.2"
blitz-traits = "0.2"
parley = "0.6"
thiserror = "2"
