[package]
name = "fulgur-ruby"
version = "0.0.1"
# rb_sys cross-gem-action は `directory: crates/fulgur-ruby` のみをコンテナに
# マウントするため、この Cargo.toml は workspace root 不在でも cargo metadata
# を解決できる必要がある。したがって workspace 継承 (`.workspace = true`) は
# 使わず、値は root Cargo.toml [workspace.package] と同期させて inline する。
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitsuru/fulgur"
homepage = "https://github.com/mitsuru/fulgur"
description = "Ruby bindings for fulgur — offline HTML/CSS to PDF conversion"
publish = false

[lib]
name = "fulgur"
crate-type = ["cdylib", "rlib"]

[features]
ruby-api = ["dep:magnus", "dep:rb-sys"]

[dependencies]
fulgur = { path = "../fulgur" }
base64 = "0.22"
magnus = { version = "0.7", optional = true }
rb-sys = { version = "0.9", optional = true }
# Send/Sync 保証 (Engine) のコンパイル時 assertion で使用。
# ext/fulgur/Cargo.toml にも同じ依存を追加していること。
static_assertions = "1.1"
