[package]
name = "fulgur"
version = "0.4.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTML/CSS to PDF conversion library"
readme = "../../README.md"
keywords = ["pdf", "html", "css", "converter"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
cssparser = "0.36"
krilla = "0.7.0"
krilla-svg = "0.7.0"
usvg = "0.45"
blitz-usvg = { package = "usvg", version = "0.46" }
blitz-html = { git = "https://github.com/dioxuslabs/blitz", branch = "main", default-features = false }
blitz-dom = { git = "https://github.com/dioxuslabs/blitz", branch = "main", default-features = false, features = ["svg", "woff-rust"] }
blitz-traits = { git = "https://github.com/dioxuslabs/blitz", branch = "main", default-features = false }
parley = { git = "https://github.com/linebender/parley", rev = "5660d0b1acec4a3118f0301c2d35508b33dfe785", default-features = false, features = ["std"] }
skrifa = { version = "0.40", default-features = false, features = ["std"] }
stylo = "0.16.0"
woff2-patched = "0.4"
thiserror = "2"
minijinja = { version = "=2.19.0", features = ["unstable_machinery"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
image = { version = "0.25", default-features = false, features = ["png"] }
