[package]
name = "fulgur"
version = "0.5.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTML/CSS to PDF conversion library"
readme = "../../README.md"
keywords = ["pdf", "html", "css", "converter"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
cssparser = "0.35"
krilla = "0.7.0"
krilla-svg = "0.7.0"
usvg = "0.45"
blitz-html = "0.2"
blitz-dom = "0.2"
blitz-traits = "0.2"
taffy = "0.10"
parley = "0.6"
skrifa = "0.37"
stylo = "0.8.0"
woff2-patched = "0.4"
thiserror = "2"
minijinja = { version = "=2.19.0", features = ["unstable_machinery"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
image = { version = "0.25", default-features = false, features = ["png"] }
