[package]
name = "fulgur"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTML/CSS to PDF conversion library"
readme = "../../README.md"
keywords = ["pdf", "html", "css", "converter"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
cssparser = "0.37"
krilla = "0.7.0"
krilla-svg = "0.7.0"
usvg = "0.45"
blitz-html = "0.2"
blitz-dom = "0.2"
blitz-traits = "0.2"
taffy = "0.9"
parley = "0.7"
skrifa = "0.42"
stylo = "0.8.0"
woff2-patched = "0.4"
thiserror = "2"
minijinja = { version = "=2.19.0", features = ["unstable_machinery"] }
serde_json = "1"
log = "0.4"
lopdf = "0.40.0"
serde = { version = "1", features = ["derive"] }

# WASM (wasm32-unknown-unknown) build support: pulled in transitively by lopdf/rand.
# Feature unification propagates `wasm_js` to the lopdf-side dependency so the
# crate selects the `crypto.getRandomValues()` backend instead of failing with
# `compile_error!`. Browser-class targets only — WASI requires a different
# backend selection. Tracking: fulgur-iym (strategic v0.7.0).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
tempfile = "3.27.0"
image = { version = "0.25", default-features = false, features = ["png"] }
