[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyfulgur"
version = "0.5.5"
description = "Python bindings for fulgur — offline HTML/CSS to PDF conversion"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Mitsuru Hayasaka", email = "hayasaka.mitsuru@gmail.com" },
]
keywords = ["pdf", "html", "css", "conversion", "typesetting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/fulgur-rs/fulgur"
Documentation = "https://github.com/fulgur-rs/fulgur"
Changelog = "https://github.com/fulgur-rs/fulgur/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.maturin]
module-name = "pyfulgur"
manifest-path = "Cargo.toml"
features = ["extension-module"]
py-limited-api = "cp39"
