[workspace]

[package]
name = "fulgur"
version = "0.5.6"
# crates/fulgur-ruby/Cargo.toml と同じ src を共有 (path = "../../src/lib.rs")。
# workspace と同じ edition 2024 に揃える。
edition = "2024"

[lib]
name = "fulgur"
crate-type = ["cdylib"]
path = "../../src/lib.rs"

[features]
default = ["ruby-api"]
ruby-api = ["dep:magnus", "dep:rb-sys"]

[dependencies]
# cross-gem-action は `directory: crates/fulgur-ruby` しか container にマウントしない
# ため、`path = "../../../fulgur"` では cargo がパスを解決できない。crates.io 公開版
# を参照する (release 時は release.yml → release: published → release-ruby.yml の順で
# 発火するため、この時点で fulgur のバージョンは crates.io に存在する)。
# release-prepare.yml が sed でこの行のバージョンを同期する。
fulgur = "0.5.6"
base64 = "0.22"
magnus = { version = "0.7", optional = true }
rb-sys = { version = "0.9", optional = true }
# 親 crate の src/lib.rs `mod assertions` が使用。
static_assertions = "1.1"
